# nc2000-engine

./: .gitignore  Cargo.toml  ENDGAME-SOLVER-ALGORITHM.md  LICENSE  PORT-NOTES.md  PORTING.md  README.md  STALL-CENSUS-RESULTS.md  THIRD-PARTY-NOTICES.md  THRESHOLD-DAMAGE-EXPERIMENT.md  THRESHOLD-DAMAGE-RESULTS.md
.github/workflows/: pages.yml
crates/bot/: Cargo.toml  build.rs
crates/bot/examples/: anchor_gate.rs  arena.rs  bake_preview.rs  chance_conformance.rs  damage_abstraction.rs  damage_abstraction_duel.rs  damage_conformance.rs  endgame_exactness.rs  endgame_exactness_corpus.rs  eval_ab_duel.rs  eval_calibration.rs  human_agreement.rs  offpool_fallback_gauntlet.rs  play.rs  profile_mcts.rs  regret_mining.rs  rental_strength.rs  replay_analysis.rs  replay_postmortem.rs  replay_postmortem_3623.rs  replay_postmortem_3635.rs  replay_postmortem_frz.rs  replay_postmortem_selfko.rs  research_meta.rs  selfko_probe.rs  stall_census.rs  tune.rs
crates/bot/src/: agent.rs  belief.rs  blind.rs  bounds.rs  corpus.rs  damage_search.rs  duel.rs  eval.rs  exact.rs  exploit.rs  import.rs  lib.rs  m17e_artifact.rs  mcts.rs  observe.rs  preview.rs  regret.rs  rng.rs  runner.rs  smmcts.rs  stall.rs  teamgen.rs
crates/bot/tests/: belief.rs  blind.rs  bots.rs  evasion.rs  import.rs  preview_tables.rs  teamgen.rs
crates/conformance/: Cargo.toml
crates/conformance/examples/: bench.rs  clone_anatomy.rs  debug.rs  profile.rs  sweep.rs
crates/conformance/src/: compare.rs  fixture.rs  lib.rs
crates/conformance/tests/: berry_confusion.rs  dex_load.rs  fixture_load.rs  meta_pool.rs  prng_parity.rs  replay.rs  search_api.rs  sleep_clause.rs
crates/engine/: Cargo.toml
crates/engine/src/: battle.rs  choice.rs  dex.rs  events.rs  lib.rs  prng.rs  state.rs  validate.rs
crates/engine/src/battle/: actions.rs  choices.rs  conditions.rs  dmg.rs  enumerate.rs  essence.rs  events.rs  fieldfx.rs  items.rs  mod.rs  moveexec.rs  pokemon.rs  search.rs  turn.rs
crates/wasm/: Cargo.toml  build.sh
crates/wasm/examples/: native_bench.rs
crates/wasm/src/: lib.rs
crates/wasm/tests-node/: bench.js  common.js  determinism.js  parity.js  smoke.js
data/: gen2stadium2.json  i18n-ja.json  learnsets-gen2.json  m17b-tier-gate-v1.json
data/community-rentals-v0/: ASSESSMENT.md  raw.json  stats.json  teams.json
data/double-rest-v0/: README.md  RESULTS.md  corpus-oracle.csv
data/meta-pool-v0/: README.md  meta-pool.json
data/preview-tables-research/: cand-pool-05-vs-00.json  cand-pool-05-vs-01.json  cand-pool-05-vs-02.json  (+10 more)
docs/: HANDOFF-2026-07-20-audit.md  M11-metagame-research.md
fixtures/: prng-vectors.json
reference/: merged-conditions.txt  merged-items.txt  merged-moves.txt
tmp/: m11-run.sh
tools/: aggregate-arena.py  aggregate-human-agreement.py  aggregate-regret.py  build-i18n-ja.js  build-meta-pool.js  dump-callbacks.js  export-dex.js  export-learnsets.js  gen-fixtures.js  gen-porting-checklist.js  gen-prng-vectors.js  merge-m17e.py  package-lock.json  package.json  parse-community-rentals.js  probe-max-total-level.js  ps-arena.js  ps-client.js  ps.js  validate-oracle.js
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+1062 files in other folders)
