[package]
name = "nc2000-bot"
version = "0.1.0"
edition = "2021"
description = "Search bots for nc2000-engine: MCTS/DUCT, state-keyed skuct, RM mixed strategies, imperfect-info blind agent, baked preview tables"
license.workspace = true
repository.workspace = true

[dependencies]
nc2000-engine = { path = "../engine" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
conformance = { path = "../conformance" }
pprof = { version = "0.15.0", features = ["flamegraph"] }
