[package]
name = "nc2000-engine"
version = "0.1.0"
edition = "2021"
description = "Rust port of Pokemon Showdown's [Gen 2] NC 2000 format (gen2stadium2), bit-exact against PS fixtures"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = "1.15.2"
