[package]
name = "nc2000-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nc2000-engine = { path = "../engine" }
nc2000-bot = { path = "../bot" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"

[dev-dependencies]
conformance = { path = "../conformance" }
